# credit_risk_scoring

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  final_model.pkl  pyproject.toml
config/: config.yaml
mlruns/0/: meta.yaml
mlruns/303455327645573076/: meta.yaml
mlruns/303455327645573076/0a8d7bb135714e46a3e42dbdd08b9b05/: meta.yaml
mlruns/303455327645573076/2294d288918a44f6908f045e357ca08e/: meta.yaml
mlruns/303455327645573076/22d26b3823df4f958e3ba90c775ee025/: meta.yaml
mlruns/303455327645573076/3dc35de469d1454aaa768c85232a443a/: meta.yaml
mlruns/303455327645573076/40803c63431140da9c1fcc48d3e2c9e4/: meta.yaml
mlruns/303455327645573076/4161a00250ca4353aecd265cf71d77ce/: meta.yaml
mlruns/303455327645573076/477636ac822245d0bd93ed04dac5d355/: meta.yaml
mlruns/303455327645573076/567dd93fdf5b40e99a97f0b75bb439bd/: meta.yaml
mlruns/303455327645573076/591378895aae4c2d8e627398983bede3/: meta.yaml
mlruns/303455327645573076/7dd40b06783045cd9958f28613d4c23c/: meta.yaml
mlruns/303455327645573076/88f732f271a648dfa3bc5340e412a6d4/: meta.yaml
mlruns/303455327645573076/a2f2631e8b8a436882f040e6eb3e46d6/: meta.yaml
mlruns/303455327645573076/af161537482b4d09bf961c41784a1abb/: meta.yaml
mlruns/303455327645573076/b9adf996258b41a2aaf5e3f1bfa9876d/: meta.yaml
mlruns/303455327645573076/c11f17ba0eef40aa80337d773b34af9e/: meta.yaml
notebooks/: Proyecto_Adult_Income.ipynb  analisis_interpretabilidad.ipynb  credit_risk_scoring.ipynb
src/: api.py  dashboard.py  pipeline.py  preprocessing.py  train.py
(+137 files in other folders)
